<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a8fdi12.birthdayhelper.ContactView"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        />

    <Spinner
        android:id="@+id/sp_telefonos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/iv_avatar"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/te_nombre"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_alignBaseline="@+id/iv_contacto"
        android:layout_alignBottom="@+id/iv_contacto"
        android:layout_toRightOf="@+id/iv_avatar"
        android:layout_toEndOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_cumple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sp_telefonos"
        android:layout_marginTop="19dp"
        android:hint="@string/te_fechanac"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible" />

    <Button
        android:id="@+id/iv_contacto"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sp_telefonos"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_contacto"
        android:onClick="onVerContacto"/>

    <CheckBox
        android:id="@+id/cb_esms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_cumple"
        android:layout_marginTop="15dp"
        android:text="@string/ch_enviar"
        android:onClick="checkEnviarMensaje"/>

    <EditText
        android:id="@+id/et_mensaje"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_mensaje"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:layout_below="@+id/cb_esms"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mensaje"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/btn_guardar"
        android:onClick="onGuardar"/>

</RelativeLayout>